--- a/exercicios/desafioCordel/estilo/style.css
+++ b/exercicios/desafioCordel/estilo/style.css
@@ -1,4 +1,17 @@
 @charset "UTF-8";
+@import url('https://fonts.googleapis.com/css2?family=Passion+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Sriracha&display=swap');
+
+
+/* 'Passion One', cursive; 
+    'Sriracha', cursive;
+    */
+
+ :root{
+     --fonte1: Verdana, Geneva, Tahoma, sans-serif;
+     --fonte2: 'Passion One', cursive;
+     --fonte3: 'Sriracha', cursive;
+ }  
 *{
     margin: 0px;
     padding: 0px;
@@ -7,6 +20,7 @@
 html,body{
     min-height: 100vh;
     background-color: darkgray;
+    font-family: var(--fonte1);
 
 }
 
@@ -16,8 +30,10 @@ header{
     text-align: center;
 }
 header > h1{
+    font-family: var(--fonte2);
     padding-top: 50px;
     font-variant: small-caps;
+    font-size: 10vw;
 
 }
 header > p{
@@ -33,10 +49,12 @@ a:hover{
     text-decoration: underline;
 }
 section{
+    font-family: var(--fonte3);
     line-height: 2em;
     padding-top: 10vh;
     padding-bottom: 10vh;
     padding-left: 30px;
+    font-size: 3.5vw;
 }
 
 section.normal{
@@ -50,7 +68,8 @@ section.imagem{
 }
 section.imagem > p{
     background-color: rgba(0, 0, 0, 0.24);
-    width: 400px;
+    display: inline-block;
+    padding: 5px;
 }
 footer{
     background-color: black;
