--- a/exercicios/desafioCordel/estilo/style.css
+++ b/exercicios/desafioCordel/estilo/style.css
@@ -48,6 +48,9 @@ a{
 a:hover{
     text-decoration: underline;
 }
+section >p{
+    padding-bottom: 2em;
+}
 section{
     font-family: var(--fonte3);
     line-height: 2em;
@@ -64,12 +67,28 @@ section.normal{
 section.imagem{
     background-color: rgb(68, 68, 68);
     color: white;
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.356);
+    background-attachment: fixed;
+       
 
 }
 section.imagem > p{
-    background-color: rgba(0, 0, 0, 0.24);
+    background-color: rgba(0, 0, 0, 0.336);
     display: inline-block;
     padding: 5px;
+    text-shadow: 1px 1px 0px black;
+    
+}
+section#img01{
+    background-image: url('../imagens/background001.jpg');
+    background-position: right center;
+    background-size: cover;
+}
+
+section#img02{
+    background-image: url('../imagens/background002.jpg');
+    background-position: right center;
+    background-size: cover;
 }
 footer{
     background-color: black;
